<resources>
    <string name="app_name">LoggingInterceptor</string>
    <string name="req_post">POST</string>
    <string name="req_get">GET</string>
    <string name="req_delete">DELETE</string>
    <string name="req_patch">PATCH</string>
    <string name="req_put">PUT</string>
    <string name="req_pdf">FILE</string>
    <string name="req_pdf_upload">UPLOAD</string>
    <string name="req_zip">ZIP</string>
</resources>
